--- a/master.css
+++ b/master.css
@@ -73,7 +73,7 @@ html, body {
 
 .subBtn{
     width: 100%;
-    margin-top: 25px;
+    margin-top: 10px;
     padding: 10px;
     text-align: center;
     border: 0;
@@ -105,5 +105,28 @@ html, body {
   color: #FC7613;
 }
 
-.attribution { font-size: 11px; text-align: center; }
+.card-front {
+  z-index: 1;
+}
+
+.clicked {
+  z-index: 0 !important;
+}
+
+.card-front, .card-back{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+}
 .attribution a { color: hsl(228, 45%, 44%); }
